# TASToolKitEditor

./: .gitignore  CMakeLists.txt  InputFile.cpp  InputFile.h  InputFileMenu.h  InputFileModel.cpp  InputFileModel.h  InputTableView.cpp  Program.cs  README.md  TASToolKitEditor.cpp  TASToolKitEditor.h  TASToolKitEditor.qrc  TASToolKitEditor.sln  TASToolKitEditor.vcxproj  TASToolKitEditor.vcxproj.filters  TASToolkitEditorForm.Designer.cs  TASToolkitEditorForm.cs  TTKMainWindow.cpp  Utils.cs  main.cpp
.github/workflows/: windows-latest.yml
src/: CMakeLists.txt  Definitions.h  InputFile.cpp  InputFile.h  InputFileMenu.cpp  InputFileMenu.h  InputFileModel.cpp  InputFileModel.h  InputTableView.cpp  InputTableView.h  InputTableViewNew.cpp  InputTableViewNew.h  PlayerTypeInstance.cpp  PlayerTypeInstance.h  TASToolKitEditor.qrc  TASToolKitEditor.sln  TASToolKitEditor.vcxproj  TASToolKitEditor.vcxproj.filters  TTKMainWindow.cpp  TTKMainWindow.h  main.cpp
src/data/: InputFileHandler.cpp  InputFileHandler.h  InputFileModel.cpp  InputFileModel.h  PlayerTypeInstance.cpp  PlayerTypeInstance.h  RKGFileHandler.cpp  RKGFileHandler.h  RKGHeaderModel.cpp  RKGHeaderModel.h
src/include/: Definitions.h  RKGDefinitions.h
src/ui/: InputFileMenu.cpp  InputFileMenu.h  InputTableView.cpp  InputTableView.h  RKGDelegates.cpp  RKGDelegates.h  TTKMainWindow.cpp  TTKMainWindow.h
